src/objects/Pachinko_Case_Type__c.object
<CustomObject>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leave_Case_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leave Case Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Threshold__c</fullName>
        <label>Monthly Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pachinko_Case_Type__c</fullName>
        <label>Pachinko Case Type</label>
        <length>101</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendation_Text__c</fullName>
        <label>Recommendation Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threshold_Applies_To__c</fullName>
        <label>Threshold Applies To</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Velocity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCT{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Velocities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>